--- a/Vinicole/StoryBoard/DeviceControl.storyboard
+++ b/Vinicole/StoryBoard/DeviceControl.storyboard
@@ -234,19 +234,19 @@
                                         <rect key="frame" x="0.0" y="45" width="320" height="85.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MOO-dl-fM5">
-                                                <rect key="frame" x="18" y="13.5" width="31" height="60"/>
+                                                <rect key="frame" x="18" y="8.5" width="33.5" height="70"/>
                                                 <fontDescription key="fontDescription" name="DS-Digital-BoldItalic" family="DS-Digital" pointSize="60"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="℃1_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Swg-9I-blN">
-                                                <rect key="frame" x="57" y="54.5" width="23" height="19"/>
+                                                <rect key="frame" x="59.5" y="59.5" width="23" height="19"/>
                                             </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rh1_bg" translatesAutoresizingMaskIntoConstraints="NO" id="fLn-RG-UGx">
-                                                <rect key="frame" x="278" y="50.5" width="24" height="13"/>
+                                                <rect key="frame" x="278" y="55.5" width="24" height="13"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJZ-Vr-Kaz">
-                                                <rect key="frame" x="208.5" y="13.5" width="61.5" height="60"/>
+                                                <rect key="frame" x="203" y="8.5" width="67" height="70"/>
                                                 <fontDescription key="fontDescription" name="DS-Digital-BoldItalic" family="DS-Digital" pointSize="60"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -274,28 +274,28 @@
                                         <rect key="frame" x="0.0" y="175.5" width="320" height="85.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ms1-o5-4ZC">
-                                                <rect key="frame" x="18" y="13" width="31" height="60"/>
+                                                <rect key="frame" x="18" y="8" width="33.5" height="70"/>
                                                 <fontDescription key="fontDescription" name="DS-Digital-BoldItalic" family="DS-Digital" pointSize="60"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ㄈ1_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Cwz-Wj-pg4">
-                                                <rect key="frame" x="57" y="55" width="22" height="18"/>
+                                                <rect key="frame" x="59.5" y="60" width="22" height="18"/>
                                             </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="winecooler2_adjust_icon" translatesAutoresizingMaskIntoConstraints="NO" id="A0n-x9-Irp">
-                                                <rect key="frame" x="57" y="13" width="13" height="34"/>
+                                                <rect key="frame" x="59.5" y="18" width="13" height="34"/>
                                             </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rh1_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Vbg-Xa-fpQ">
-                                                <rect key="frame" x="278" y="50" width="24" height="13"/>
+                                                <rect key="frame" x="278" y="55" width="24" height="13"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQG-KR-RHv">
-                                                <rect key="frame" x="208.5" y="13" width="61.5" height="60"/>
+                                                <rect key="frame" x="203" y="8" width="67" height="70"/>
                                                 <fontDescription key="fontDescription" name="DS-Digital-BoldItalic" family="DS-Digital" pointSize="60"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="winecooler2_adjust_icon" translatesAutoresizingMaskIntoConstraints="NO" id="U7F-kN-qeu">
-                                                <rect key="frame" x="283.5" y="8" width="13" height="34"/>
+                                                <rect key="frame" x="283.5" y="13" width="13" height="34"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eyu-TH-7WZ" userLabel="TempBtn">
                                                 <rect key="frame" x="0.0" y="0.0" width="160" height="85.5"/>
@@ -673,6 +673,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8wa-pG-uQc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1413.75" y="-199.64788732394368"/>
+        </scene>
+        <!--Ware House View Controller-->
+        <scene sceneID="djg-NU-9Jr">
+            <objects>
+                <viewController storyboardIdentifier="WareHouseViewController" id="jk2-lf-qEi" customClass="WareHouseViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y9W-OY-PBy"/>
+                        <viewControllerLayoutGuide type="bottom" id="qei-U4-ezG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5n6-ko-mKB">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ixD-SF-MEX">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="设备名字" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sep-YK-npn">
+                                        <rect key="frame" x="126" y="30" width="69.5" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="4T3-Ju-tEH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22u-Jk-BdQ">
+                                        <rect key="frame" x="8" y="26" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="6jb-Mp-Zzy"/>
+                                            <constraint firstAttribute="height" constant="30" id="O3f-iv-y94"/>
+                                        </constraints>
+                                        <state key="normal" image="Add_back">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="LeftBarBtnActin:" destination="jk2-lf-qEi" eventType="touchUpInside" id="g5f-50-zOC"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qb5-AS-koW">
+                                        <rect key="frame" x="282" y="26" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="3mE-8Y-d5O"/>
+                                            <constraint firstAttribute="height" constant="30" id="dax-dd-Uja"/>
+                                        </constraints>
+                                        <state key="normal" image="menu_btn">
+                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.097492299970000001" green="0.77213460209999996" blue="0.6380177736" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="22u-Jk-BdQ" firstAttribute="leading" secondItem="ixD-SF-MEX" secondAttribute="leading" constant="8" id="1Sp-a7-RUC"/>
+                                    <constraint firstAttribute="trailing" secondItem="Qb5-AS-koW" secondAttribute="trailing" constant="8" id="26o-W4-jXz"/>
+                                    <constraint firstAttribute="bottom" secondItem="Qb5-AS-koW" secondAttribute="bottom" constant="8.5" id="3M8-8G-E0v"/>
+                                    <constraint firstAttribute="bottom" secondItem="22u-Jk-BdQ" secondAttribute="bottom" constant="8.5" id="BxN-g5-kuf"/>
+                                    <constraint firstItem="sep-YK-npn" firstAttribute="centerX" secondItem="ixD-SF-MEX" secondAttribute="centerX" id="XhQ-DN-wyw"/>
+                                    <constraint firstAttribute="bottom" secondItem="sep-YK-npn" secondAttribute="bottom" constant="10" id="XpE-Kq-d2C"/>
+                                    <constraint firstAttribute="height" constant="64" id="iaf-hv-UTb"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ixD-SF-MEX" firstAttribute="top" secondItem="5n6-ko-mKB" secondAttribute="top" id="8rA-ME-vQV"/>
+                            <constraint firstItem="ixD-SF-MEX" firstAttribute="leading" secondItem="5n6-ko-mKB" secondAttribute="leading" id="eqR-ya-Q8V"/>
+                            <constraint firstAttribute="trailing" secondItem="ixD-SF-MEX" secondAttribute="trailing" id="w4I-c9-IbN"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qxm-yT-9GF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2102" y="-200"/>
         </scene>
     </scenes>
     <resources>
